# discord-bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  bot.py  build  db.py  dev-requirements.txt  docker-compose.yml  eval_stmts.py  pyproject.toml  requirements.in  requirements.txt  zoom.py
.github/workflows/: main.yml
