[tool.poetry]
name = "discord-bot"
version = "0.1.0"
description = ""
authors = ["Asger Hautop Drewsen <asgerdrewsen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = {extras = ["voice"], version = "^1.3.2"}
python-dotenv = "*"
sqlalchemy = "^1.3.15"
texttable = "^1.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
