[project]
name = ""
version = "0.0.1"
requires-python = ">=3.13"
dependencies = [
    "discord-py[voice]>=2.5.2",
    "pillow>=11.2.1",
    "pyppeteer2>=0.2.2",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.41",
    "texttable>=1.7.0",
    "timeout-decorator>=0.5.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
]

[tool.uv]
package = false

[tool.black]
target-version = ['py313']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | db_data
  )/
)
'''

[tool.pycln]
all = true

[tool.isort]
profile = 'black'
